t rebase --continue git pushadded himpp tools option

--- a/configs/hi3518-c7824wip_defconfig
+++ b/configs/hi3518-c7824wip_defconfig
@@ -1,12 +1,8 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2017.02.4-g4d06bcf-dirty Configuration
+# Buildroot 2017.02.4-g25121c064-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
-BR2_HOST_GCC_AT_LEAST_4_5=y
-BR2_HOST_GCC_AT_LEAST_4_6=y
-BR2_HOST_GCC_AT_LEAST_4_7=y
-BR2_HOST_GCC_AT_LEAST_4_8=y
 
 #
 # Target options
@@ -134,7 +130,6 @@ BR2_STRIP_EXCLUDE_DIRS=""
 # BR2_OPTIMIZE_3 is not set
 # BR2_OPTIMIZE_G is not set
 BR2_OPTIMIZE_S=y
-# BR2_GOOGLE_BREAKPAD_ENABLE is not set
 BR2_SSP_NONE=y
 # BR2_SSP_REGULAR is not set
 # BR2_SSP_STRONG is not set
@@ -526,7 +521,10 @@ BR2_PACKAGE_MPLAYER_ARCH_SUPPORTS=y
 # BR2_PACKAGE_FIO is not set
 # BR2_PACKAGE_GDB is not set
 BR2_PACKAGE_GOOGLE_BREAKPAD_ARCH_SUPPORTS=y
-# BR2_PACKAGE_GOOGLE_BREAKPAD is not set
+
+#
+# google-breakpad requires a glibc or uClibc toolchain w/ wchar, thread, C++, gcc >= 4.8
+#
 # BR2_PACKAGE_IOZONE is not set
 # BR2_PACKAGE_KEXEC is not set
 # BR2_PACKAGE_KTAP is not set
@@ -716,7 +714,10 @@ BR2_PACKAGE_CMAKE_ARCH_SUPPORTS=y
 #
 # BR2_PACKAGE_CEGUI06 is not set
 # BR2_PACKAGE_DIRECTFB is not set
-# BR2_PACKAGE_EFL is not set
+
+#
+# efl needs a toolchain w/ C++, dynamic library, gcc >= 4.7, threads, wchar
+#
 # BR2_PACKAGE_FBDUMP is not set
 # BR2_PACKAGE_FBGRAB is not set
 # BR2_PACKAGE_FBSET is not set
@@ -840,7 +841,7 @@ BR2_PACKAGE_HIMPP_SNSDRV_APTINA_AR0130=y
 # BR2_PACKAGE_HIMPP_SNSDRV_GALAXYCORE_GC1014 is not set
 # BR2_PACKAGE_HIMPP_SNSDRV_HIMAX_1375 is not set
 BR2_PACKAGE_HIMPP_SNSDRV_ONMI_OV9712=y
-# BR2_PACKAGE_HIMPP_SNSDRV_ONMI_OV9712_PLUS is not set
+BR2_PACKAGE_HIMPP_SNSDRV_ONMI_OV9712_PLUS=y
 # BR2_PACKAGE_HIMPP_SNSDRV_PANASONIC_MN34031 is not set
 # BR2_PACKAGE_HIMPP_SNSDRV_PANASONIC_MN34041 is not set
 # BR2_PACKAGE_HIMPP_SNSDRV_PIXELPLUS_3100K is not set
@@ -862,6 +863,8 @@ BR2_PACKAGE_HIMPP_EXTDRV_SSP_AD9020=y
 BR2_PACKAGE_HIMPP_EXTDRV_SSP_PANA=y
 BR2_PACKAGE_HIMPP_EXTDRV_SSP_SONY=y
 BR2_PACKAGE_HIMPP_EXTDRV_TW2865=y
+# BR2_PACKAGE_HIMPP_TOOLS is not set
+# BR2_PACKAGE_HIMPP_SAMPLES is not set
 # BR2_PACKAGE_HWDATA is not set
 # BR2_PACKAGE_HWLOC is not set
 # BR2_PACKAGE_I2C_TOOLS is not set
@@ -1016,7 +1019,10 @@ BR2_PACKAGE_LUAJIT_ARCH_SUPPORTS=y
 # BR2_PACKAGE_MOARVM is not set
 BR2_PACKAGE_MONO_ARCH_SUPPORTS=y
 # BR2_PACKAGE_MONO is not set
-# BR2_PACKAGE_NODEJS is not set
+
+#
+# nodejs needs a toolchain w/ C++, dynamic library, threads, gcc >= 4.8, wchar
+#
 # BR2_PACKAGE_PERL is not set
 # BR2_PACKAGE_PHP is not set
 # BR2_PACKAGE_PYTHON is not set
@@ -2225,7 +2231,10 @@ BR2_PACKAGE_HOST_GO_CGO_LINKING_SUPPORTS=y
 # BR2_PACKAGE_HOST_JSMIN is not set
 # BR2_PACKAGE_HOST_LPC3250LOADER is not set
 # BR2_PACKAGE_HOST_LTTNG_BABELTRACE is not set
-# BR2_PACKAGE_HOST_MFGTOOLS is not set
+
+#
+# mfgtools needs host gcc >= 4.8
+#
 # BR2_PACKAGE_HOST_MKE2IMG is not set
 # BR2_PACKAGE_HOST_MKPASSWD is not set
 # BR2_PACKAGE_HOST_MTD is not set
