--- a/package/himpp/himpp-hi3518v100/Config.in
+++ b/package/himpp/himpp-hi3518v100/Config.in
@@ -130,10 +130,22 @@ config BR2_PACKAGE_HIMPP_EXTDRV_TW2865
 
 endmenu
 
+
+#
+# [feb.19] added support for tools building
+config BR2_PACKAGE_HIMPP_TOOLS
+	bool "Build MPP2 tools"
+    default n
+    depends on BR2_PACKAGE_HIMPP_HI3518V100
+	help
+	  Build tools (eg. vi_bayerdump) for HiMPP2 for Hi3518
+
+
+
 menuconfig BR2_PACKAGE_HIMPP_SAMPLES
 	bool "Build MPP2 samples"
 	default n
-	depends on BR2_PACKAGE_HIMPP_HI3518
+	depends on BR2_PACKAGE_HIMPP_HI3518V100
 	help
 	  Build samples for HiMPP2 for HI3518
 
