myopencam build process update: tests added

--- a/package/myopencam/tests/Makefile
+++ b/package/myopencam/tests/Makefile
@@ -6,13 +6,22 @@ endif
 SRC  := $(wildcard *.c)
 OBJ  := $(SRC:%.c=%.o)
 
-INC_FLAGS := -I$(REL_INC)
-CFLAGS += -Wall -g -lpthread $(INC_FLAGS)
-LIBS += $(REL_LIB)/libisp.a
-LIBS += $(REL_LIB)/libmpi.a
+#
+# Relatives includes and libraries paths
+REL_INC?=../include
+REL_LIB?=../lib
+
+INC_FLAGS:=-I$(REL_INC)
+LIB_FLAGS:=-L$(REL_LIB)
+
+CFLAGS += $(MYOPENCAM_CFLAGS) $(INC_FLAGS) $(LIB_FLAGS) -lpthread
+
+LIBS += $(LIB_STAGING_DIR)/libisp.a
+LIBS += $(LIB_STAGING_DIR)/libmpi.a
+
 
 ifneq ($(HIARCH),hi3518)
-LIBS += $(REL_LIB)/libhdmi.a
+LIBS += $(LIB_STAGING_DIR)/libhdmi.a
 else
 CFLAGS += -DHI_3518	
 endif
@@ -22,77 +31,87 @@ SNS:=$(MAKECMDGOALS)
                     
 
 ifeq ($(SNS),)
-SNS:=ar130
+SNS:=ov9712
 endif
 
 ifeq ($(SNS), ar130)
-LIBS += $(REL_LIB)/libsns_ar0130_720p.a
+LIBS += $(LIB_STAGING_DIR)/libsns_ar0130_720p.a
 CFLAGS += -DSNS_AR0130
 endif
 
 ifeq ($(SNS), 9m034)
-LIBS += $(REL_LIB)/libsns_9m034.a
+LIBS += $(LIB_STAGING_DIR)/libsns_9m034.a
 CFLAGS += -DSNS_9M034
 endif
 
 ifeq ($(SNS), imx104)
-LIBS += $(REL_LIB)/libsns_imx104.a
+LIBS += $(LIB_STAGING_DIR)/libsns_imx104.a
 CFLAGS += -DSNS_IMX104
 endif
 
 ifeq ($(SNS), imx122)
-LIBS += $(REL_LIB)/libsns_imx122.a
+LIBS += $(LIB_STAGING_DIR)/libsns_imx122.a
 CFLAGS += -DSNS_IMX122
 endif
 
 ifeq ($(SNS), mn34031)
-LIBS += $(REL_LIB)/libsns_mn34031_720p.a
+LIBS += $(LIB_STAGING_DIR)/libsns_mn34031_720p.a
 CFLAGS += -DSNS_MN34031
 endif
 
 ifeq ($(SNS), ov9712)
-LIBS += $(REL_LIB)/libsns_ov9712.a
+LIBS += $(LIB_STAGING_DIR)/libsns_ov9712.a
 CFLAGS += -DSNS_OV9712
 endif
 
 ifeq ($(SNS), icx692)
-LIBS += $(REL_LIB)/libsns_icx692.a
+LIBS += $(LIB_STAGING_DIR)/libsns_icx692.a
 CFLAGS += -DSNS_ICX692
 endif
 
 ifeq ($(SNS), imx138)
-LIBS += $(REL_LIB)/libsns_imx138.a
+LIBS += $(LIB_STAGING_DIR)/libsns_imx138.a
 CFLAGS += -DSNS_IMX138
 endif
 
 ifeq ($(SNS), 9p006)
-LIBS += $(REL_LIB)/libsns_mt9p006.a
+LIBS += $(LIB_STAGING_DIR)/libsns_mt9p006.a
 CFLAGS += -DSNS_9P006
 endif
 
 ifeq ($(SNS), po3100k)
-LIBS += $(REL_LIB)/libsns_po3100k.a
+LIBS += $(LIB_STAGING_DIR)/libsns_po3100k.a
 CFLAGS += -DSNS_PO3100K
 endif
 
 ifeq ($(SNS), ar0330)
-LIBS += $(REL_LIB)/libsns_ar0330_1080p.a
+LIBS += $(LIB_STAGING_DIR)/libsns_ar0330_1080p.a
 CFLAGS += -DSNS_AR0330
 endif
 
 ifeq ($(SNS), imx236)
-LIBS += $(REL_LIB)/libsns_imx236.a
+LIBS += $(LIB_STAGING_DIR)/libsns_imx236.a
 CFLAGS += -DSNS_IMX236
 endif
 
 ifeq ($(CONFIG_ISP), y)
 CFLAGS += -DISP_V1
 else
-LIBS += $(REL_LIB)/lib_hiae.a
-LIBS += $(REL_LIB)/lib_hiawb.a
-LIBS += $(REL_LIB)/lib_hiaf.a
+LIBS += $(LIB_STAGING_DIR)/lib_hiae.a
+LIBS += $(LIB_STAGING_DIR)/lib_hiawb.a
+LIBS += $(LIB_STAGING_DIR)/lib_hiaf.a
 CFLAGS += -DISP_V2 -lm
 endif
+
+
+#
+# Hisilicon Audio libraries
+AUDIO_LIBS += $(LIB_STAGING_DIR)/libVoiceEngine.a \
+		$(LIB_STAGING_DIR)/libaec.a \
+        $(LIB_STAGING_DIR)/libresampler.a \
+        $(LIB_STAGING_DIR)/libanr.a\
+        $(LIB_STAGING_DIR)/libvqev2.a
+
 
 TARGET := $(OBJ:%.o=%)
 
@@ -101,12 +120,14 @@ TARGET := $(OBJ:%.o=%)
 all: $(TARGET)
 
 $(TARGET):%:%.o 
-	$(CC) $(CFLAGS)  -o $@ $^ $(LIBS) $(AUDIO_LIBA) -Wl,-gc-sections
+	$(CC) $(CFLAGS)  -o $@ $^ $(LIBS) $(AUDIO_LIBS) -Wl,-gc-sections
 	@rm *.o
 clean:
 	@rm -f $(TARGET)
 	@rm -f $(OBJ)
+
 ifneq ($(SNS), clean)
 $(SNS): all
 	@echo
 endif
+
