--- a/package/myopencam/Makefile.param
+++ b/package/myopencam/Makefile.param
@@ -26,7 +26,14 @@ export AR:=$(CROSS)ar
 export MYOPENCAM_CFLAGS:= -Wall
 MYOPENCAM_CFLAGS += -g
 
-#export REL_INC := $(REL_DIR)/include
-#export REL_LIB := $(REL_DIR)/lib
+# staging include dirs
+ifneq ($(INC_STAGING_DIR), )
+MYOPENCAM_CFLAGS += -I$(INC_STAGING_DIR)
+endif
+
+# staging library dirs
+ifneq ($(LIB_STAGING_DIR), )
+MYOPENCAM_CFLAGS += -L$(LIB_STAGING_DIR)
+endif
 
 # End!!
