package myopencam wip: added support for kernel modules, tests app

--- a/configs/hi3518-c7824wip-nfsroot_defconfig
+++ b/configs/hi3518-c7824wip-nfsroot_defconfig
@@ -2174,7 +2174,8 @@ BR2_PACKAGE_XVISOR_ARCH_SUPPORTS=y
 #
 BR2_PACKAGE_MYOPENCAM_PREFIX="/opt/myopencam"
 BR2_PACKAGE_MYOPENCAM=y
-# BR2_PACKAGE_MYOPENCAM_TESTS is not set
+BR2_PACKAGE_MYOPENCAM_MODULES=y
+BR2_PACKAGE_MYOPENCAM_TESTS=y
 
 #
 # Filesystem images
