--- a/package/myopencam/kdriver/wtdg/Makefile
+++ b/package/myopencam/kdriver/wtdg/Makefile
@@ -5,15 +5,17 @@
 
 EXTRA_CFLAGS += -DHIDEBUG -g
 
-obj-m := wdt.o
-wdt-y += hi_wdt.o 
+# built as a Module (i.e xxx-m)
+obj-m := hi_wdt.o
+# our module depends on list ob objects
+myobjects-y += hi_wdt.o 
 
 ccflags-y := -I$(PWD)/ -DDEBUG -g -std=gnu99 -Wno-declaration-after-statement
 
 
 .PHONY: all clean
 
-all:	
+all:
 	echo -e "\e[0;32;1m--Compiling 'wtdg'... \e[0;36;1m"
 	echo -e "\e[0m" 
 	$(MAKE) -C $(LINUX_ROOT) M=$(PWD) modules 
