added rtc_test compilation

--- a/package/myopencam/kdriver/mymotogpio/Makefile
+++ b/package/myopencam/kdriver/mymotogpio/Makefile
@@ -6,15 +6,17 @@
 # kernel module as 'module' (i.e -m for module)
 obj-m := mymotogpio.o
 
-# list all objects our module depends on
-myobjects-y += mymotogpio.o 
+# list all objects our module also depends on, example
+# mymotogpio-y += mygpio.o myPID.o
+
 
 ccflags-y := -I$(PWD)/ -DDEBUG -g -std=gnu99 -Wno-declaration-after-statement
 
 
 .PHONY: all clean
 
-all:	
+all:
+	# Useless in buildroot with $(eval (kernel-module))	
 	echo -e "\e[0;32;1m--Compiling 'wtdg'... \e[0;36;1m"
 	echo -e "\e[0m" 
 	$(MAKE) -C '$(LINUX_DIR)' M='$(PWD)' modules
