added GC1004/GC1014 cmos sensors

--- a/configs/hi3518-c7824wip_defconfig
+++ b/configs/hi3518-c7824wip_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2017.02.4-g00da0d1-dirty Configuration
+# Buildroot 2017.02.4-g956db95 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_5=y
@@ -832,12 +832,12 @@ BR2_PACKAGE_HIMPP_PREFIX="/usr"
 # Sensor driver libraries
 #
 # BR2_PACKAGE_HIMPP_SNSDRV_APTINA_9M034 is not set
-BR2_PACKAGE_HIMPP_SNSDRV_APTINA_AR0130=y
+# BR2_PACKAGE_HIMPP_SNSDRV_APTINA_AR0130 is not set
 # BR2_PACKAGE_HIMPP_SNSDRV_APTINA_AR0330 is not set
 # BR2_PACKAGE_HIMPP_SNSDRV_APTINA_AR0331 is not set
 # BR2_PACKAGE_HIMPP_SNSDRV_APTINA_MT9P006 is not set
-# BR2_PACKAGE_HIMPP_SNSDRV_GALAXYCORE_GC1004 is not set
-# BR2_PACKAGE_HIMPP_SNSDRV_GALAXYCORE_GC1014 is not set
+BR2_PACKAGE_HIMPP_SNSDRV_GALAXYCORE_GC1004=y
+BR2_PACKAGE_HIMPP_SNSDRV_GALAXYCORE_GC1014=y
 # BR2_PACKAGE_HIMPP_SNSDRV_HIMAX_1375 is not set
 BR2_PACKAGE_HIMPP_SNSDRV_ONMI_OV9712=y
 BR2_PACKAGE_HIMPP_SNSDRV_ONMI_OV9712_PLUS=y
@@ -864,6 +864,20 @@ BR2_PACKAGE_HIMPP_EXTDRV_SSP_SONY=y
 BR2_PACKAGE_HIMPP_EXTDRV_TW2865=y
 # BR2_PACKAGE_HIMPP_TOOLS is not set
 # BR2_PACKAGE_HIMPP_SAMPLES is not set
+# BR2_PACKAGE_HIMPP_SNS_APTINA_9M034 is not set
+# BR2_PACKAGE_HIMPP_SNS_APTINA_AR0130 is not set
+# BR2_PACKAGE_HIMPP_SNS_APTINA_AR0330 is not set
+# BR2_PACKAGE_HIMPP_SNS_HIMAX_1375 is not set
+# BR2_PACKAGE_HIMPP_SNS_OMNI_OV2710 is not set
+# BR2_PACKAGE_HIMPP_SNS_OMNI_OV9712 is not set
+# BR2_PACKAGE_HIMPP_SNS_PANASONIC_MN34031 is not set
+# BR2_PACKAGE_HIMPP_SNS_PIXELPLUS_3100K is not set
+# BR2_PACKAGE_HIMPP_SNS_SOI_H22 is not set
+# BR2_PACKAGE_HIMPP_SNS_SONY_ICX692 is not set
+# BR2_PACKAGE_HIMPP_SNS_SONY_IMX104 is not set
+# BR2_PACKAGE_HIMPP_SNS_SONY_IMX122 is not set
+# BR2_PACKAGE_HIMPP_SNS_SONY_IMX138 is not set
+# BR2_PACKAGE_HIMPP_SNS_SONY_IMX236 is not set
 # BR2_PACKAGE_HWDATA is not set
 # BR2_PACKAGE_HWLOC is not set
 # BR2_PACKAGE_I2C_TOOLS is not set
