--- a/configs/hi3518-c7824wip-nfsroot_defconfig
+++ b/configs/hi3518-c7824wip-nfsroot_defconfig
@@ -837,8 +837,8 @@ BR2_PACKAGE_HIMPP_SNSDRV_APTINA_AR0130=y
 # BR2_PACKAGE_HIMPP_SNSDRV_APTINA_AR0330 is not set
 # BR2_PACKAGE_HIMPP_SNSDRV_APTINA_AR0331 is not set
 # BR2_PACKAGE_HIMPP_SNSDRV_APTINA_MT9P006 is not set
-# BR2_PACKAGE_HIMPP_SNSDRV_GALAXYCORE_GC1004 is not set
-# BR2_PACKAGE_HIMPP_SNSDRV_GALAXYCORE_GC1014 is not set
+BR2_PACKAGE_HIMPP_SNSDRV_GALAXYCORE_GC1004=y
+BR2_PACKAGE_HIMPP_SNSDRV_GALAXYCORE_GC1014=y
 # BR2_PACKAGE_HIMPP_SNSDRV_HIMAX_1375 is not set
 BR2_PACKAGE_HIMPP_SNSDRV_ONMI_OV9712=y
 BR2_PACKAGE_HIMPP_SNSDRV_ONMI_OV9712_PLUS=y
