update ... bayerdump still does not work

--- a/package/myopencam/Makefile.param
+++ b/package/myopencam/Makefile.param
@@ -33,7 +33,7 @@ MYOPENCAM_CFLAGS += -DHIDEBUG
 # Image Signal Processor (ISP) v2
 # Note: disable config_isp for compatibility with previously existing toolchain
 export CONFIG_ISP=n
-#MYOPENCAM_CFLAGS += -DISP_V2
+MYOPENCAM_CFLAGS += -DISP_V2
 
 # Tests TRACES
 MYOPENCAM_CFLAGS += -DTRACE_IT
