switched all tests to dynamic libs

--- a/package/myopencam/tests/Makefile
+++ b/package/myopencam/tests/Makefile
@@ -2,6 +2,7 @@
 #
 # Tests apps.
 #
+# [apr.19] added support for shared libs
 # [feb.19] added rtc_test from kdriver/rtc/rtc_test
 #
 ifeq ($(PARAM_FILE), )
@@ -20,14 +21,18 @@ REL_LIB?=../lib
 INC_FLAGS:=-I$(REL_INC)
 LIB_FLAGS:=-L$(REL_LIB)
 
-CFLAGS += $(MYOPENCAM_CFLAGS) $(INC_FLAGS) $(LIB_FLAGS) -lpthread
+CFLAGS += $(MYOPENCAM_CFLAGS) $(INC_FLAGS) $(LIB_FLAGS) -fPIC -shared -lpthread
+#CFLAGS += $(MYOPENCAM_CFLAGS) $(INC_FLAGS) $(LIB_FLAGS) -lpthread
 
-LIBS += $(LIB_STAGING_DIR)/libisp.a
-LIBS += $(LIB_STAGING_DIR)/libmpi.a
+LIBS += -lisp
+#LIBS += $(LIB_STAGING_DIR)/libisp.a
+LIBS += -lmpi
+#LIBS += $(LIB_STAGING_DIR)/libmpi.a
 
 
 ifneq ($(HIARCH),hi3518)
-LIBS += $(LIB_STAGING_DIR)/libhdmi.a
+LIBS += -lhdmi
+#LIBS += $(LIB_STAGING_DIR)/libhdmi.a
 else
 CFLAGS += -DHI_3518	
 endif
@@ -37,94 +42,108 @@ SNS:=$(MAKECMDGOALS)
                     
 
 ifeq ($(SNS),)
-SNS:=gc1004
+SNS:=gc1024
 endif
 
 ifeq ($(SNS), ar130)
-LIBS += $(LIB_STAGING_DIR)/libsns_ar0130_720p.a
+LIBS += -lsns_ar0130_720p
+#LIBS += $(LIB_STAGING_DIR)/libsns_ar0130_720p.a
 CFLAGS += -DSNS_AR0130
 endif
 
 ifeq ($(SNS), 9m034)
-LIBS += $(LIB_STAGING_DIR)/libsns_9m034.a
+LIBS += -lsns_9m034
+#LIBS += $(LIB_STAGING_DIR)/libsns_9m034.a
 CFLAGS += -DSNS_9M034
 endif
 
 ifeq ($(SNS), imx104)
-LIBS += $(LIB_STAGING_DIR)/libsns_imx104.a
+LIBS += -lsns_imx104
+#LIBS += $(LIB_STAGING_DIR)/libsns_imx104.a
 CFLAGS += -DSNS_IMX104
 endif
 
 ifeq ($(SNS), imx122)
-LIBS += $(LIB_STAGING_DIR)/libsns_imx122.a
+LIBS += -lsns_imx122
+#LIBS += $(LIB_STAGING_DIR)/libsns_imx122.a
 CFLAGS += -DSNS_IMX122
 endif
 
 ifeq ($(SNS), mn34031)
-LIBS += $(LIB_STAGING_DIR)/libsns_mn34031_720p.a
+LIBS += -lsns_mn34031_720p
+#LIBS += $(LIB_STAGING_DIR)/libsns_mn34031_720p.a
 CFLAGS += -DSNS_MN34031
 endif
 
 ifeq ($(SNS), ov9712)
-LIBS += $(LIB_STAGING_DIR)/libsns_ov9712.a
+LIBS += -lsns_ov9712
+#LIBS += $(LIB_STAGING_DIR)/libsns_ov9712.a
 CFLAGS += -DSNS_OV9712
 endif
 
 ifeq ($(SNS), icx692)
-LIBS += $(LIB_STAGING_DIR)/libsns_icx692.a
+LIBS += -lsns_icx692
+#LIBS += $(LIB_STAGING_DIR)/libsns_icx692.a
 CFLAGS += -DSNS_ICX692
 endif
 
 ifeq ($(SNS), imx138)
-LIBS += $(LIB_STAGING_DIR)/libsns_imx138.a
+LIBS += -lsns_imx138
+#LIBS += $(LIB_STAGING_DIR)/libsns_imx138.a
 CFLAGS += -DSNS_IMX138
 endif
 
 ifeq ($(SNS), 9p006)
-LIBS += $(LIB_STAGING_DIR)/libsns_mt9p006.a
+LIBS += -lsns_mt9p006
+#LIBS += $(LIB_STAGING_DIR)/libsns_mt9p006.a
 CFLAGS += -DSNS_9P006
 endif
 
 ifeq ($(SNS), po3100k)
-LIBS += $(LIB_STAGING_DIR)/libsns_po3100k.a
+LIBS += -lsns_po3100k
+#LIBS += $(LIB_STAGING_DIR)/libsns_po3100k.a
 CFLAGS += -DSNS_PO3100K
 endif
 
 ifeq ($(SNS), ar0330)
-LIBS += $(LIB_STAGING_DIR)/libsns_ar0330_1080p.a
+LIBS += -lsns_ar0330_1080p
+#LIBS += $(LIB_STAGING_DIR)/libsns_ar0330_1080p.a
 CFLAGS += -DSNS_AR0330
 endif
 
 ifeq ($(SNS), imx236)
-LIBS += $(LIB_STAGING_DIR)/libsns_imx236.a
+LIBS += -lsns_imx236
+#LIBS += $(LIB_STAGING_DIR)/libsns_imx236.a
 CFLAGS += -DSNS_IMX236
 endif
 
 ifeq ($(SNS), gc1004)
-LIBS += $(LIB_STAGING_DIR)/libsns_gc1004.a
+LIBS += -lsns_gc1004
+#LIBS += $(LIB_STAGING_DIR)/libsns_gc1004.a
 CFLAGS += -DSNS_GC1004
 endif
 
 ifeq ($(SNS), gc1014)
-LIBS += $(LIB_STAGING_DIR)/libsns_gc1014.a
+LIBS += -lsns_gc1014
+#LIBS += $(LIB_STAGING_DIR)/libsns_gc1014.a
 CFLAGS += -DSNS_GC1024
 endif
 
 ifeq ($(SNS), gc1024)
 # [apr.19] we don't have source code for gc1024 lib
-#LIBS += $(LIB_STAGING_DIR)/libsns_gc1024.a
-
 # libsns_gc1024.so comes from the original firmware and required libisp
-LIBS_SO += -lmpi -lisp -l_hiae -l_hiawb -lsns_gc1024
-CFLAGS += -fPIC -DSNS_GC1024
+LIBS += -lsns_gc1024
+#LIBS += $(LIB_STAGING_DIR)/libsns_gc1024.a
+CFLAGS += -DSNS_GC1024
 endif
 
 ifeq ($(CONFIG_ISP), y)
 CFLAGS += -DISP_V1
 else
-LIBS += $(LIB_STAGING_DIR)/lib_hiae.a
-LIBS += $(LIB_STAGING_DIR)/lib_hiawb.a
-LIBS += $(LIB_STAGING_DIR)/lib_hiaf.a
+LIBS += -l_hiae -l_hiawb -l_hiaf
+#LIBS += $(LIB_STAGING_DIR)/lib_hiae.a
+#LIBS += $(LIB_STAGING_DIR)/lib_hiawb.a
+#LIBS += $(LIB_STAGING_DIR)/lib_hiaf.a
 LIBS += -lm
 CFLAGS += -DISP_V2
 endif
@@ -132,15 +151,17 @@ endif
 
 #
 # Hisilicon Audio libraries
-AUDIO_LIBS += $(LIB_STAGING_DIR)/libVoiceEngine.a \
-		$(LIB_STAGING_DIR)/libaec.a \
-        $(LIB_STAGING_DIR)/libresampler.a \
-        $(LIB_STAGING_DIR)/libanr.a\
-        $(LIB_STAGING_DIR)/libvqev2.a
+AUDIO_LIBS += -lVoiceEngine -laec -lresampler -lanr -lvqev2
+#AUDIO_LIBS += $(LIB_STAGING_DIR)/libVoiceEngine.a \
+#        $(LIB_STAGING_DIR)/libaec.a \
+#        $(LIB_STAGING_DIR)/libresampler.a \
+#        $(LIB_STAGING_DIR)/libanr.a\
+#        $(LIB_STAGING_DIR)/libvqev2.a
 
 #
 # TODO: usefull ??
-#LIBS += $(LIB_STAGING_DIR)/libjpeg.a
+#LIBS += -ljpeg
+##LIBS += $(LIB_STAGING_DIR)/libjpeg.a
 
 
 #
@@ -159,11 +180,11 @@ TARGET := $(OBJ:%.o=%)
 all: $(TARGET) rtc_test
 
 $(TARGET):%:%.o 
-	$(CC) $(CFLAGS)  -o $@ $^ $(LIBS) $(AUDIO_LIBS) $(LIBS_SO) -Wl,-gc-sections
+	$(CC) $(CFLAGS)  -o $@ $^ $(LIBS) $(AUDIO_LIBS) -Wl,-gc-sections
 	@rm *.o
 
 rtc_test:
-	$(CC) $(CFLAGS) -I./ -o $@ ../kdriver/rtc/rtc_test.c $(LIBS) $(AUDIO_LIBS) $(LIBS_SO) -Wl,-gc-sections
+	$(CC) $(CFLAGS) -I./ -o $@ ../kdriver/rtc/rtc_test.c $(LIBS) $(AUDIO_LIBS) -Wl,-gc-sections
 
 clean:
 	@rm -f $(TARGET)
