--- a/package/myopencam/Makefile.param
+++ b/package/myopencam/Makefile.param
@@ -21,6 +21,7 @@ endif
 export PARAM_FILE
 
 export CC:=$(CROSS)gcc
+#export CC:=$(CROSS)g++
 export AR:=$(CROSS)ar
 
 export MYOPENCAM_CFLAGS:= -Wall
