switched myopencam tests to dynamic lib with gc1014/gc1024

--- a/package/myopencam/tests/Makefile
+++ b/package/myopencam/tests/Makefile
@@ -1,8 +1,9 @@
 #######################################################################
 #
-# Tests apps.
+# Tests apps. imported from Himpp package
 #
 # [apr.19] added support for shared libs
+#          and SWITCH TO DYNAMIC LIBS :)
 # [feb.19] added rtc_test from kdriver/rtc/rtc_test
 #
 ifeq ($(PARAM_FILE), )
@@ -23,15 +24,15 @@ LIB_FLAGS:=-L$(REL_LIB)
 
 CFLAGS += $(MYOPENCAM_CFLAGS) $(INC_FLAGS) $(LIB_FLAGS) -lpthread
 
-LIBS += -lisp
-#LIBS += $(LIB_STAGING_DIR)/libisp.a
-LIBS += -lmpi
-#LIBS += $(LIB_STAGING_DIR)/libmpi.a
+LIBS_SO += -lisp
+LIBS += $(LIB_STAGING_DIR)/libisp.a
+LIBS_SO += -lmpi
+LIBS += $(LIB_STAGING_DIR)/libmpi.a
 
 
 ifneq ($(HIARCH),hi3518)
-LIBS += -lhdmi
-#LIBS += $(LIB_STAGING_DIR)/libhdmi.a
+LIBS_SO += -lhdmi
+LIBS += $(LIB_STAGING_DIR)/libhdmi.a
 else
 CFLAGS += -DHI_3518	
 endif
@@ -39,100 +40,103 @@ endif
 # sensor input type: ar130 mn34031
 SNS:=$(MAKECMDGOALS)
                     
-
+# Sensor default definition
+# Note: VstarCam C7824WIP is a GalaxyCore GC1024
+# 		while gc1004 DOES NOT WORK!
 ifeq ($(SNS),)
-#SNS:=gc1004
-SNS:=gc1024			# vstarcam c7824wip
+SNS:=gc1014
+#SNS:=gc1024
 endif
+$(info CMOS sensor set to '${SNS}')
 
 ifeq ($(SNS), ar130)
-LIBS += -lsns_ar0130_720p
-#LIBS += $(LIB_STAGING_DIR)/libsns_ar0130_720p.a
+LIBS_SO += -lsns_ar0130_720p
+LIBS += $(LIB_STAGING_DIR)/libsns_ar0130_720p.a
 CFLAGS += -DSNS_AR0130
 endif
 
 ifeq ($(SNS), 9m034)
-LIBS += -lsns_9m034
-#LIBS += $(LIB_STAGING_DIR)/libsns_9m034.a
+LIBS_SO += -lsns_9m034
+LIBS += $(LIB_STAGING_DIR)/libsns_9m034.a
 CFLAGS += -DSNS_9M034
 endif
 
 ifeq ($(SNS), imx104)
-LIBS += -lsns_imx104
-#LIBS += $(LIB_STAGING_DIR)/libsns_imx104.a
+LIBS_SO += -lsns_imx104
+LIBS += $(LIB_STAGING_DIR)/libsns_imx104.a
 CFLAGS += -DSNS_IMX104
 endif
 
 ifeq ($(SNS), imx122)
-LIBS += -lsns_imx122
-#LIBS += $(LIB_STAGING_DIR)/libsns_imx122.a
+LIBS_SO += -lsns_imx122
+LIBS += $(LIB_STAGING_DIR)/libsns_imx122.a
 CFLAGS += -DSNS_IMX122
 endif
 
 ifeq ($(SNS), mn34031)
-LIBS += -lsns_mn34031_720p
-#LIBS += $(LIB_STAGING_DIR)/libsns_mn34031_720p.a
+LIBS_SO += -lsns_mn34031_720p
+LIBS += $(LIB_STAGING_DIR)/libsns_mn34031_720p.a
 CFLAGS += -DSNS_MN34031
 endif
 
 ifeq ($(SNS), ov9712)
-LIBS += -lsns_ov9712
-#LIBS += $(LIB_STAGING_DIR)/libsns_ov9712.a
+LIBS_SO += -lsns_ov9712
+LIBS += $(LIB_STAGING_DIR)/libsns_ov9712.a
 CFLAGS += -DSNS_OV9712
 endif
 
 ifeq ($(SNS), icx692)
-LIBS += -lsns_icx692
-#LIBS += $(LIB_STAGING_DIR)/libsns_icx692.a
+LIBS_SO += -lsns_icx692
+LIBS += $(LIB_STAGING_DIR)/libsns_icx692.a
 CFLAGS += -DSNS_ICX692
 endif
 
 ifeq ($(SNS), imx138)
-LIBS += -lsns_imx138
-#LIBS += $(LIB_STAGING_DIR)/libsns_imx138.a
+LIBS_SO += -lsns_imx138
+LIBS += $(LIB_STAGING_DIR)/libsns_imx138.a
 CFLAGS += -DSNS_IMX138
 endif
 
 ifeq ($(SNS), 9p006)
-LIBS += -lsns_mt9p006
-#LIBS += $(LIB_STAGING_DIR)/libsns_mt9p006.a
+LIBS_SO += -lsns_mt9p006
+LIBS += $(LIB_STAGING_DIR)/libsns_mt9p006.a
 CFLAGS += -DSNS_9P006
 endif
 
 ifeq ($(SNS), po3100k)
-LIBS += -lsns_po3100k
-#LIBS += $(LIB_STAGING_DIR)/libsns_po3100k.a
+LIBS_SO += -lsns_po3100k
+LIBS += $(LIB_STAGING_DIR)/libsns_po3100k.a
 CFLAGS += -DSNS_PO3100K
 endif
 
 ifeq ($(SNS), ar0330)
-LIBS += -lsns_ar0330_1080p
-#LIBS += $(LIB_STAGING_DIR)/libsns_ar0330_1080p.a
+LIBS_SO += -lsns_ar0330_1080p
+LIBS += $(LIB_STAGING_DIR)/libsns_ar0330_1080p.a
 CFLAGS += -DSNS_AR0330
 endif
 
 ifeq ($(SNS), imx236)
-LIBS += -lsns_imx236
-#LIBS += $(LIB_STAGING_DIR)/libsns_imx236.a
+LIBS_SO += -lsns_imx236
+LIBS += $(LIB_STAGING_DIR)/libsns_imx236.a
 CFLAGS += -DSNS_IMX236
 endif
 
 ifeq ($(SNS), gc1004)
-LIBS += -lsns_gc1004
-#LIBS += $(LIB_STAGING_DIR)/libsns_gc1004.a
+LIBS_SO += -lsns_gc1004
+LIBS += $(LIB_STAGING_DIR)/libsns_gc1004.a
 CFLAGS += -DSNS_GC1004
 endif
 
 ifeq ($(SNS), gc1014)
-LIBS += -lsns_gc1014
-#LIBS += $(LIB_STAGING_DIR)/libsns_gc1014.a
-CFLAGS += -DSNS_GC1024
+LIBS_SO += -lsns_gc1014
+LIBS += $(LIB_STAGING_DIR)/libsns_gc1014.a
+CFLAGS += -DSNS_GC1014
 endif
 
 ifeq ($(SNS), gc1024)
 # [apr.19] we don't have source code for gc1024 lib
 # libsns_gc1024.so comes from the original firmware and required libisp
-LIBS += -lsns_gc1024
+LIBS_SO += -lsns_gc1024
 #LIBS += $(LIB_STAGING_DIR)/libsns_gc1024.a
 CFLAGS += -DSNS_GC1024
 endif
@@ -140,23 +144,23 @@ endif
 ifeq ($(CONFIG_ISP), y)
 CFLAGS += -DISP_V1
 else
-LIBS += -l_hiae -l_hiawb -l_hiaf
-#LIBS += $(LIB_STAGING_DIR)/lib_hiae.a
-#LIBS += $(LIB_STAGING_DIR)/lib_hiawb.a
-#LIBS += $(LIB_STAGING_DIR)/lib_hiaf.a
+LIBS += $(LIB_STAGING_DIR)/lib_hiae.a
+LIBS += $(LIB_STAGING_DIR)/lib_hiawb.a
+LIBS += $(LIB_STAGING_DIR)/lib_hiaf.a
 LIBS += -lm 
+LIBS_SO += -l_hiae -l_hiawb -l_hiaf -lm
 CFLAGS += -DISP_V2
 endif
 
 
 #
 # Hisilicon Audio libraries
-AUDIO_LIBS += -lVoiceEngine -laec -lresampler -lanr -lvqev2
-#AUDIO_LIBS += $(LIB_STAGING_DIR)/libVoiceEngine.a \
-#        $(LIB_STAGING_DIR)/libaec.a \
-#        $(LIB_STAGING_DIR)/libresampler.a \
-#        $(LIB_STAGING_DIR)/libanr.a\
-#        $(LIB_STAGING_DIR)/libvqev2.a
+AUDIO_LIBS += $(LIB_STAGING_DIR)/libVoiceEngine.a \
+        $(LIB_STAGING_DIR)/libaec.a \
+        $(LIB_STAGING_DIR)/libresampler.a \
+        $(LIB_STAGING_DIR)/libanr.a\
+        $(LIB_STAGING_DIR)/libvqev2.a
+AUDIO_LIBS_SO += -lVoiceEngine -laec -lresampler -lanr -lvqev2
 
 #
 # TODO: usefull ??
@@ -165,13 +169,9 @@ AUDIO_LIBS += -lVoiceEngine -laec -lresampler -lanr -lvqev2
 
 
 #
-# [apr.19] adding flags for mix of static and shared libs
-#ifneq ($(LIBS_SO),)
-#LIBS := -Wl,--whole-archive $(LIBS) -Wl,--no-whole-archive
-#AUDIO_LIBS := -Wl,--whole-archive $(AUDIO_LIBS)
-# notice that gcc makes use of dynamic libs
-#LIBS_SO	:= -Wl,-Bdynamic $(LIBS_SO)
-#endif
+# [apr.19] switch all to dynamic libs
+LIBS := $(LIBS_SO)
+AUDIO_LIBS := $(AUDIO_LIBS_SO)
 
 TARGET := $(OBJ:%.o=%)
 
